[project]
name = "llama3-2-vision-90b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.4.7",
    "pyaudio>=0.2.14",
    "pypdf2>=3.0.1",
    "rich>=13.9.4",
    "sounddevice>=0.5.1",
    "speechrecognition>=3.14.2",
    "streamlit>=1.43.2",
]
